# agent-ledger

./: .gitignore  Cargo.toml  README.md  ledger.yaml
crates/agent-ledger-agents/: Cargo.toml
crates/agent-ledger-agents/src/: adapter.rs  claude.rs  codex.rs  copilot.rs  lib.rs
crates/agent-ledger-cli/: Cargo.toml
crates/agent-ledger-cli/src/: main.rs
crates/agent-ledger-cli/src/commands/: doctor.rs  init.rs  mod.rs  observe.rs  session_lifecycle.rs  snapshot.rs  start.rs  status.rs  submit.rs  verify.rs
crates/agent-ledger-core/: Cargo.toml
crates/agent-ledger-core/src/: event.rs  hash_chain.rs  lib.rs  manifest.rs  scoring.rs  session.rs  signing.rs  status.rs  storage.rs  workspace.rs
crates/agent-ledger-menubar/: Cargo.toml
crates/agent-ledger-menubar/src/: macos.rs  main.rs  presentation.rs
crates/agent-ledger-runner/: Cargo.toml
crates/agent-ledger-runner/src/: file_watcher.rs  git.rs  lib.rs  process.rs  pty.rs
