[workspace]
members = [
    "crates/agent-ledger-cli",
    "crates/agent-ledger-core",
    "crates/agent-ledger-agents",
    "crates/agent-ledger-runner",
    "crates/agent-ledger-menubar",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["agent-ledger contributors"]
license = "MIT"
repository = "https://github.com/SamMRoberts/agent-ledger"

[workspace.dependencies]
# Core dependencies
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
# CLI
clap = { version = "4", features = ["derive"] }
# Async
tokio = { version = "1", features = ["full"] }
# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
# File watching
notify = "6"
# Compression/archiving
tar = "0.4.44"
flate2 = "1"
# Hex encoding
hex = "0.4"
# Path utilities
walkdir = "2"
# Internal crates
agent-ledger-core = { path = "crates/agent-ledger-core" }
agent-ledger-agents = { path = "crates/agent-ledger-agents" }
agent-ledger-runner = { path = "crates/agent-ledger-runner" }
