[package]
name = "agent-ledger-runner"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
notify.workspace = true
agent-ledger-core.workspace = true
agent-ledger-agents.workspace = true
chrono.workspace = true
